// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInForm should render the form correctly 1`] = `
<View
  style={
    [
      [
        undefined,
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginBottom": 8,
          },
          {
            "alignItems": "center",
          },
          {
            "justifyContent": "space-between",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "SpaceGrotesk-Medium",
            },
            {
              "fontSize": 16,
            },
            {
              "lineHeight": 18,
            },
            {
              "color": "#505050",
            },
          ]
        }
      >
        Email
      </Text>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
          {
            "borderBottomLeftRadius": 6,
            "borderBottomRightRadius": 6,
            "borderTopLeftRadius": 6,
            "borderTopRightRadius": 6,
          },
          {
            "paddingBottom": 12,
            "paddingTop": 12,
          },
          {
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          {
            "overflow": "hidden",
          },
          {
            "borderBottomColor": "#505050",
            "borderLeftColor": "#505050",
            "borderRightColor": "#505050",
            "borderTopColor": "#505050",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={5}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            [
              {
                "opacity": undefined,
              },
              undefined,
            ],
          ]
        }
        testID="input/email/LeftIcon"
      >
        <Text />
      </View>
      <View
        style={
          [
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "paddingLeft": 12,
              "paddingRight": 12,
            },
            [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="email"
          className="text-[16px] leading-[20px] font-[SpaceGrotesk-Regular] text-[16px] leading-[18px]"
          cursorColor="#FFB300"
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Entrez votre email"
          selectionColor="#FFB300"
          testID="input/email"
          textContentType="emailAddress"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "marginTop": 12,
        },
        [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginBottom": 8,
          },
          {
            "alignItems": "center",
          },
          {
            "justifyContent": "space-between",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "SpaceGrotesk-Medium",
            },
            {
              "fontSize": 16,
            },
            {
              "lineHeight": 18,
            },
            {
              "color": "#505050",
            },
          ]
        }
      >
        Mot de passe
      </Text>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
          {
            "borderBottomLeftRadius": 6,
            "borderBottomRightRadius": 6,
            "borderTopLeftRadius": 6,
            "borderTopRightRadius": 6,
          },
          {
            "paddingBottom": 12,
            "paddingTop": 12,
          },
          {
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          {
            "overflow": "hidden",
          },
          {
            "borderBottomColor": "#505050",
            "borderLeftColor": "#505050",
            "borderRightColor": "#505050",
            "borderTopColor": "#505050",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={5}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            [
              {
                "opacity": undefined,
              },
              undefined,
            ],
          ]
        }
        testID="input/password/LeftIcon"
      >
        <Text />
      </View>
      <View
        style={
          [
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "paddingLeft": 12,
              "paddingRight": 12,
            },
            [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="password"
          className="text-[16px] leading-[20px] font-[SpaceGrotesk-Regular] text-[16px] leading-[18px]"
          cursorColor="#FFB300"
          keyboardType="default"
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Entrez votre mot de passe"
          secureTextEntry={true}
          selectionColor="#FFB300"
          testID="input/password"
          textContentType="password"
          value=""
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={5}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            [
              {
                "opacity": undefined,
              },
              undefined,
            ],
          ]
        }
        testID="input/password/RightIcon"
      >
        <Text />
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    event="clic_forgot_password"
    focusable={true}
    hitSlop={5}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "marginTop": 12,
        },
        {
          "alignSelf": "flex-end",
        },
        [
          {
            "opacity": undefined,
          },
          undefined,
        ],
      ]
    }
    testID="forgotPassword/button"
  >
    <Text
      style={
        [
          {
            "fontFamily": "SpaceGrotesk-Medium",
          },
          {
            "fontSize": 14,
          },
          {
            "color": "#505050",
          },
          {
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      Mot de passe oublié ?
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    animation="scale"
    collapsable={false}
    event="clic_sign_in"
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
        {
          "justifyContent": "center",
        },
        {
          "borderBottomLeftRadius": 6,
          "borderBottomRightRadius": 6,
          "borderTopLeftRadius": 6,
          "borderTopRightRadius": 6,
        },
        {
          "height": 44,
        },
        {
          "backgroundColor": "#FFB300",
        },
        {
          "marginTop": 32,
        },
        [
          {
            "transform": [
              {
                "scale": undefined,
              },
            ],
          },
          undefined,
        ],
      ]
    }
    testID="signIn/button"
  >
    <Text
      style={
        [
          {
            "fontFamily": "SpaceGrotesk-Bold",
          },
          {
            "fontSize": 16,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Se connecter
    </Text>
  </View>
</View>
`;

exports[`SignInForm should render the form loading 1`] = `
<View
  style={
    [
      [
        undefined,
        undefined,
      ],
    ]
  }
>
  <View
    style={
      [
        [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginBottom": 8,
          },
          {
            "alignItems": "center",
          },
          {
            "justifyContent": "space-between",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "SpaceGrotesk-Medium",
            },
            {
              "fontSize": 16,
            },
            {
              "lineHeight": 18,
            },
            {
              "color": "#505050",
            },
          ]
        }
      >
        Email
      </Text>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
          {
            "borderBottomLeftRadius": 6,
            "borderBottomRightRadius": 6,
            "borderTopLeftRadius": 6,
            "borderTopRightRadius": 6,
          },
          {
            "paddingBottom": 12,
            "paddingTop": 12,
          },
          {
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          {
            "overflow": "hidden",
          },
          {
            "borderBottomColor": "#505050",
            "borderLeftColor": "#505050",
            "borderRightColor": "#505050",
            "borderTopColor": "#505050",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={5}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            [
              {
                "opacity": undefined,
              },
              undefined,
            ],
          ]
        }
        testID="input/email/LeftIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 15,
              },
              [
                {
                  "marginLeft": 8,
                },
                {
                  "color": "#505050",
                },
              ],
              {
                "fontFamily": "feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "paddingLeft": 12,
              "paddingRight": 12,
            },
            [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="email"
          className="text-[16px] leading-[20px] font-[SpaceGrotesk-Regular] text-[16px] leading-[18px]"
          cursorColor="#FFB300"
          keyboardType="email-address"
          onBlur={[Function]}
          onChangeText={[Function]}
          onSubmitEditing={[Function]}
          placeholder="Entrez votre email"
          selectionColor="#FFB300"
          testID="input/email"
          textContentType="emailAddress"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "marginTop": 12,
        },
        [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "marginBottom": 8,
          },
          {
            "alignItems": "center",
          },
          {
            "justifyContent": "space-between",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "SpaceGrotesk-Medium",
            },
            {
              "fontSize": 16,
            },
            {
              "lineHeight": 18,
            },
            {
              "color": "#505050",
            },
          ]
        }
      >
        Mot de passe
      </Text>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
          },
          {
            "alignItems": "center",
          },
          {
            "borderBottomLeftRadius": 6,
            "borderBottomRightRadius": 6,
            "borderTopLeftRadius": 6,
            "borderTopRightRadius": 6,
          },
          {
            "paddingBottom": 12,
            "paddingTop": 12,
          },
          {
            "borderBottomWidth": 1,
            "borderLeftWidth": 1,
            "borderRightWidth": 1,
            "borderTopWidth": 1,
          },
          {
            "backgroundColor": "#FFFFFF",
          },
          {
            "overflow": "hidden",
          },
          {
            "borderBottomColor": "#505050",
            "borderLeftColor": "#505050",
            "borderRightColor": "#505050",
            "borderTopColor": "#505050",
          },
          [
            undefined,
            undefined,
          ],
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={5}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            [
              {
                "opacity": undefined,
              },
              undefined,
            ],
          ]
        }
        testID="input/password/LeftIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 15,
              },
              [
                {
                  "marginLeft": 8,
                },
                {
                  "color": "#505050",
                },
              ],
              {
                "fontFamily": "feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "0%",
              "flexGrow": 1,
              "flexShrink": 1,
            },
            {
              "paddingLeft": 12,
              "paddingRight": 12,
            },
            [
              undefined,
              undefined,
            ],
          ]
        }
      >
        <TextInput
          autoCapitalize="none"
          autoComplete="password"
          className="text-[16px] leading-[20px] font-[SpaceGrotesk-Regular] text-[16px] leading-[18px]"
          cursorColor="#FFB300"
          keyboardType="default"
          onBlur={[Function]}
          onChangeText={[Function]}
          placeholder="Entrez votre mot de passe"
          secureTextEntry={true}
          selectionColor="#FFB300"
          testID="input/password"
          textContentType="password"
          value=""
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={5}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            [
              {
                "opacity": undefined,
              },
              undefined,
            ],
          ]
        }
        testID="input/password/RightIcon"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 15,
              },
              [
                {
                  "marginRight": 8,
                },
                {
                  "color": "#505050",
                },
              ],
              {
                "fontFamily": "feather",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    event="clic_forgot_password"
    focusable={true}
    hitSlop={5}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "marginTop": 12,
        },
        {
          "alignSelf": "flex-end",
        },
        [
          {
            "opacity": undefined,
          },
          undefined,
        ],
      ]
    }
    testID="forgotPassword/button"
  >
    <Text
      style={
        [
          {
            "fontFamily": "SpaceGrotesk-Medium",
          },
          {
            "fontSize": 14,
          },
          {
            "color": "#505050",
          },
          {
            "textDecorationLine": "underline",
          },
        ]
      }
    >
      Mot de passe oublié ?
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    animation="scale"
    collapsable={false}
    event="clic_sign_in"
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "alignItems": "center",
        },
        {
          "justifyContent": "center",
        },
        {
          "borderBottomLeftRadius": 6,
          "borderBottomRightRadius": 6,
          "borderTopLeftRadius": 6,
          "borderTopRightRadius": 6,
        },
        {
          "height": 44,
        },
        {
          "backgroundColor": "#FFB300",
        },
        {
          "marginTop": 32,
        },
        [
          {
            "transform": [
              {
                "scale": undefined,
              },
            ],
          },
          undefined,
        ],
      ]
    }
    testID="signIn/button"
  >
    <ActivityIndicator
      color="white"
    />
  </View>
</View>
`;
